--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./index.css" />
-    <title>React App</title>
+    <title>Pictobook</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
